# foundry-keycloak-passthrough

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  azure.yaml
.github/workflows/: ci.yml  release.yml
agent_v2/: .env.example  agent.py  pyproject.toml
agent_v3/: .env.example  README.md  agent.py  pyproject.toml
agent_v4/: README.md
agent_v5/: .env.example  README.md  agent.py  pyproject.toml
client/: .env.example  README.md  pyproject.toml  requirements.txt  test_client.py  test_plan_direct_entra.md
infra/: README.md  main.bicep  main.bicepparam
infra/modules/: appRegistrations.bicep  appService.bicep
infra/modules/ai/: ai-project.bicep
infra/modules/apps/: apps-private-link.bicep  keycloak-aca.bicep
infra/modules/data/: postgres.bicep
infra/modules/monitor/: loganalytics.bicep
scripts/: postprovision.sh  smoke.sh
server/: .env.example  README.md  config.py  pyproject.toml  requirements.txt  server.py  startup.sh
tests/: oauth-flow-test-cases.md
