[project]
name = "mcp-oauth-test-client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
    # fastmcp 3.x ships the OAuth helper, Client, and BearerAuth in one package.
    "fastmcp>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
